--- a/docker/Dockerfile.base
+++ b/docker/Dockerfile.base
@@ -317,7 +317,7 @@ RUN --mount=type=cache,target=/var/cache/apt \
     cuda-sanitizer-12-6 \
     cuda-toolkit-12-6 \
     libcublas-12-6 \
-    libcudnn9 \
+    libcudnn9-cuda-12 \
     libcusparse-12-6 \
     libnpp-12-6
 
