--- a/docker/Dockerfile.base
+++ b/docker/Dockerfile.base
@@ -324,12 +324,27 @@ RUN --mount=type=cache,target=/var/cache/apt \
 # Install TensorRT
 RUN --mount=type=cache,target=/var/cache/apt \
     apt-get update && apt-get install -y \
-    libnvinfer10 \
-    libnvinfer-plugin10 \
-    libnvonnxparsers10 \
-    libnvinfer-dispatch10 \
-    libnvinfer-bin \
-    tensorrt
+    libnvinfer10=10.3.0.30-1+cuda12.5 \
+    libnvinfer-plugin10=10.3.0.30-1+cuda12.5 \
+    libnvinfer-lean10=10.3.0.30-1+cuda12.5 \
+    libnvinfer-vc-plugin10=10.3.0.30-1+cuda12.5 \
+    libnvonnxparsers10=10.3.0.30-1+cuda12.5 \
+    libnvinfer-dispatch10=10.3.0.30-1+cuda12.5 \
+    libnvinfer-bin=10.3.0.30-1+cuda12.5 \
+    libnvinfer-dev=10.3.0.30-1+cuda12.5 \
+    libnvinfer-lean-dev=10.3.0.30-1+cuda12.5 \
+    libnvinfer-plugin-dev=10.3.0.30-1+cuda12.5 \
+    libnvinfer-vc-plugin-dev=10.3.0.30-1+cuda12.5 \
+    libnvinfer-dispatch-dev=10.3.0.30-1+cuda12.5 \
+    libnvonnxparsers-dev=10.3.0.30-1+cuda12.5 \
+    libnvinfer-samples=10.3.0.30-1+cuda12.5 \
+    libnvinfer-headers-dev=10.3.0.30-1+cuda12.5 \
+    libnvinfer-headers-plugin-dev=10.3.0.30-1+cuda12.5 \
+    python3-libnvinfer=10.3.0.30-1+cuda12.5 \
+    python3-libnvinfer-lean=10.3.0.30-1+cuda12.5 \
+    python3-libnvinfer-dispatch=10.3.0.30-1+cuda12.5 \
+    python3-libnvinfer-dev=10.3.0.30-1+cuda12.5 \
+    tensorrt=10.3.0.30-1+cuda12.5
 
 ENV TRT_LIB_PATH="/usr/lib/aarch64-linux-gnu"
 ENV TRT_INCLUDE_PATH="/usr/include/aarch64-linux-gnu"
