--- a/isaac_ros_nitros_bridge_interfaces/package.xml
+++ b/isaac_ros_nitros_bridge_interfaces/package.xml
@@ -13,7 +13,7 @@ license agreement from NVIDIA CORPORATION is strictly prohibited.
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>isaac_ros_nitros_bridge_interfaces</name>
-  <version>4.0.0</version>
+  <version>4.1.0</version>
   <description>Interfaces for Isaac ROS NITROS Bridge Msgs</description>
 
   <maintainer email="isaac-ros-maintainers@nvidia.com">Isaac ROS Maintainers</maintainer>
@@ -30,6 +30,7 @@ license agreement from NVIDIA CORPORATION is strictly prohibited.
 
   <depend>std_msgs</depend>
   <depend>isaac_ros_tensor_list_interfaces</depend>
+  <depend>sensor_msgs</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
