--- a/docker/Dockerfile.encoder
+++ b/docker/Dockerfile.encoder
@@ -28,6 +28,5 @@ RUN apt-get update && apt-get install -y \
     ros-humble-isaac-ros-nitros-tensor-list-type\
     ros-humble-isaac-ros-nitros-compressed-image-type\
     ros-humble-isaac-ros-tensor-list-interfaces\
-    ros-humble-magic-enum
-
-# ros-humble-isaac-ros-h264-encoder
+    ros-humble-magic-enum\
+    ros-humble-isaac-ros-h264-encoder
