--- a/scripts/.isaac_ros_common-config
+++ b/scripts/.isaac_ros_common-config
@@ -1,5 +1,5 @@
 # run_dev.sh config
-CONFIG_IMAGE_KEY=ros2_humble.user.depthai
+CONFIG_IMAGE_KEY=ros2_humble
 CONFIG_DOCKER_SEARCH_DIRS=/home/${USER}/dev/orx/orx_middleware/isaac_ros_common/docker
 BASE_DOCKER_REGISTRY_NAMES=("nvcr.io/isaac/ros")
 ISAAC_ROS_WS=/home/${USER}/dev/orx/orx_middleware/ros2_ws
@@ -7,8 +7,8 @@ ISAAC_ROS_WS=/home/${USER}/dev/orx/orx_middleware/ros2_ws
 # docker_deply.sh config
 # BASE_IMAGE_KEY=aarch64.ros2_humble.user
 # BASE_IMAGE_KEY=x86_64.ros2_humble.dgx_user.orx_data_processing
-BASE_IMAGE_KEY=aarch64.ros2_humble.user.depthai
-DEPLOY_IMAGE_NAME=girf/orx-middleware-isaac-ros-jetson-depthai
+BASE_IMAGE_KEY=aarch64.ros2_humble.user.hdmi_input.decoder
+DEPLOY_IMAGE_NAME=girf/orx-middleware-isaac-ros-jetson-hdmi_input_decoder_resizer
 ROS_WS=/home/${USER}/dev/orx/orx_middleware/ros2_ws
-LAUNCH_PACKAGE=depthai_ros_driver
-LAUNCH_FILE=orx_camera.launch.py
+LAUNCH_PACKAGE=nitros_resize
+LAUNCH_FILE=orx_hdmi_input_decoder_resizer.launch.py
